// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchInput > should grey out icon when disabled 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  padding-right: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div
  class=" cui-field-disabled circuit-0"
>
  <label
    class="circuit-1"
    for=":r2:"
  >
    <span
      class="circuit-2"
    >
      Search
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 7A5 5 0 1 1 2 7a5 5 0 0 1 10 0zm-.81 5.608a7 7 0 1 1 1.418-1.418l3.102 3.103c.186.189.29.443.29.709a.999.999 0 0 1-.998.998c-.266 0-.52-.104-.71-.29l-3.102-3.102zM14 5.238v-.472c.004.157.004.315 0 .472z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-describedby=":r3:"
      class="circuit-5"
      disabled=""
      id=":r2:"
      type="text"
      value=""
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`SearchInput > should render with default styles 1`] = `
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  padding-right: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":r0:"
  >
    <span
      class="circuit-2"
    >
      Search
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 7A5 5 0 1 1 2 7a5 5 0 0 1 10 0zm-.81 5.608a7 7 0 1 1 1.418-1.418l3.102 3.103c.186.189.29.443.29.709a.999.999 0 0 1-.998.998c-.266 0-.52-.104-.71-.29l-3.102-3.102zM14 5.238v-.472c.004.157.004.315 0 .472z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-describedby=":r1:"
      class="circuit-5"
      id=":r0:"
      type="text"
      value=""
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;
